Hotel/mobile.css
body {
}

#navbar .logo {
  float: none;
  text-align: center;
}

#navbar ul,
#navbar ul li {
  float: none;
}

#navbar ul li a {
  padding: 10px;
  border: 1px dotted gray;
}

/* Basics section */
.basics__img {
  display: none;
}

#basics .basics__content {
  float: none;
  width: 100%;
  height: 400px;
  text-align: center;
  padding: 50px 0px;
  overflow: hidden;
  background-color: #333;
  overflow: hidden;
  padding: 100px 30px;
}

.box {
  float: none;
  width: 100%;
}

